--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "wp/core",
+    "name": "wordpress/cores",
     "description": "Wordpress Core",
     "type": "library",
     "require": {
@@ -17,7 +17,7 @@
     ], 
     "autoload": {
 	"psr-4": {
-	   "wp\\core\\": "./core"
+	   "wordpress\\cores\\": "./core"
 	 }
      } 
 }
